--- a/index.html
+++ b/index.html
@@ -309,12 +309,12 @@
     </section>
 
     <div class="container">
-      <div class="attribution">
+      <!-- <div class="attribution">
         Challenge by
         <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
           >Frontend Mentor</a
         >. Coded by <a href="#">Karima Khatun Mim</a>.
-      </div>
+      </div> -->
     </div>
 
     <script src="./src/main.js"></script>
